<resources>
    <string name="app_name">邻速达</string>
    <string name="phone">手机号：</string>
    <string name="code">验证码：</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputCode">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="login">登录</string>
    <string name="empty">暂无数据</string>

    <string name="center">个人中心</string>
    <string name="myOrder">我的订单</string>
    <string name="myMoneyBag">我的钱包</string>

    <string name="goods">物品：</string>
    <string name="gl">公里</string>
    <string name="gj">公斤</string>
    <string name="getOrder">抢单</string>
    <string name="getGoods">收货人：</string>


    <string name="orderNum">订单号:</string>
    <string name="jiName">寄件人:</string>
    <string name="shouName">收货人：</string>
    <string name="goodsName">物品名称：</string>
    <string name="remark">备注信息：</string>


</resources>
