<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon3" />

            <TextView
                android:id="@+id/ji_address"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4" />

            <TextView
                android:id="@+id/shou_address"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods" />

            <TextView
                android:id="@+id/goodsName"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/qians15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:text="￥" />

            <TextView
                android:id="@+id/money"
                style="@style/qians15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:text="[" />

                <TextView
                    android:id="@+id/base"
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <TextView
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="]" />

            </LinearLayout>

            <TextView
                android:id="@+id/time"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp10"
                android:gravity="right"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/getOrder"
                style="@style/white15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/getorder"
                android:gravity="center"
                android:text="@string/getOrder" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
