<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/public_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:text="@string/orderNum" />

            <TextView
                android:id="@+id/orderNum"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/status"
                style="@style/qians15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp10"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/empty" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/beij" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon3" />

            <TextView
                android:id="@+id/ji_address"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="寄件人姓名:" />

            <TextView
                android:id="@+id/ji_name"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="寄件人电话：" />

            <TextView
                android:id="@+id/ji_tel"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp2"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4" />

            <TextView
                android:id="@+id/shou_address"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收件人姓名：" />

            <TextView
                android:id="@+id/shou_name"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收件人电话：" />

            <TextView
                android:id="@+id/shou_tel"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp2"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodsName" />

            <TextView
                android:id="@+id/goodsName"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/icon4"
                android:visibility="invisible" />

            <TextView
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark" />

            <TextView
                android:id="@+id/remark"
                style="@style/shen15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp2"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/qians15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:text="￥" />

            <TextView
                android:id="@+id/money"
                style="@style/qians15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:text="[" />

                <TextView
                    android:id="@+id/base"
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <TextView
                    style="@style/qians15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="]" />

            </LinearLayout>

            <TextView
                android:id="@+id/time"
                style="@style/shen15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp10"
                android:gravity="right"
                android:text="@string/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/qrsd"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@mipmap/getorder"
                android:gravity="center"
                android:text="确认送达" />

            <TextView
                android:id="@+id/querenSH"
                style="@style/white12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn"
                android:gravity="center"
                android:text="确认收货" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
